tests/ui/traits/const-traits/call.stderr
error[E0277]: the trait bound `{closure@$DIR/call.rs:7:14: 7:22}: [const] Fn()` is not satisfied
  --> $DIR/call.rs:7:13
   |
LL |     assert!((const || true)());
   |             ^^^^^^^^^^^^^^^^^

error[E0277]: the trait bound `{closure@$DIR/call.rs:7:14: 7:22}: [const] FnMut()` is not satisfied
  --> $DIR/call.rs:7:13
   |
LL |     assert!((const || true)());
   |             ^^^^^^^^^^^^^^^^^
   |
note: required by a bound in `call`
  --> $SRC_DIR/core/src/ops/function.rs:LL:COL

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
